<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pvp">2P - Player versus player</string>
    <string name="pvc">1P - Player versus Computer</string>
    <string name="high_scores">High Scores</string>
    <string name="play_vs_ai">Play vs. AI</string>
    <string name="play_game">Play Game</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="play_versus_ai">Play versus AI</string>
    <string name="err_player_one_name">You have to type in a name for player one!</string>
    <string name="err_player_two_name">You have to type in a name for player two!</string>
    <string name="err_player_same_name">Both players can not have the same name!</string>
    <string name="bot_name">TTTBot</string>
    <string name="tictactoe_canvas">TicTacToe Canvas</string>
    <string name="cross_icon">Cross Icon</string>
    <string name="zero">0</string>
    <string name="em_dash">—</string>
    <string name="circle_icon">Circle Icon</string>
    <string name="xxx_vs_xxx">XXX versus XXX</string>
    <string name="ready_to_start">Are you ready to start the game?</string>
    <string name="game_over">Game Over!</string>
    <string name="tie_game">The game was a tie. No winners!</string>
    <string name="won_the_game">won the game!</string>
    <string name="play_again">Play Again</string>
    <string name="player">Player</string>
    <string name="wins">Wins</string>
    <string name="defeats">Defeats</string>
    <string name="whatever_play_game">Whatever, play game!</string>
    <string name="ready_to_play">Ready to play?</string>
    <string name="did_you_know">Did you know...</string>
</resources>
