<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="no.woact.jeykis16.ui.fragment.MainMenuFragment">


    <Button

        android:id="@+id/btn_two_player"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/rounded_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/pvp" />

    <Button
        android:id="@+id/btn_one_player"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_two_player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/pvc" />

    <Button
        android:id="@+id/btn_high_score"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_one_player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/high_scores" />




</android.support.constraint.ConstraintLayout>
