<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context="no.woact.jeykis16.ui.fragment.GameStatusFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/playerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:id="@+id/playerOneIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cross"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cross_icon"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/playerOneScore"
            android:text="12"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:text="@string/em_dash"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/playerTwoScore"
            android:text="12"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:id="@+id/playerTwoIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/circle"
            android:scaleType="fitCenter"
            android:contentDescription="@string/circle_icon"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/playerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <Chronometer
        android:id="@+id/gameDurationChronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorWhite" />

</LinearLayout>
